# FinApi

./: .gitignore  README.md  changelog.md
Low/: CMakeLists.txt
Low/include/finapi/: finapi.h
Low/include/finapi/Backtester/: DataHandler.h  Event.h  ExSystemStructs.h
Low/include/finapi/Core/: Core.h  Execution.h  Models.h  SysInclude.h
Low/include/finapi/Execution/: DataHandler.h  Event.h  ExSystemStructs.h  Execution.h  ExecutionHandler.h  FillHandler.h  Portfolio.h  Strategy.h
Low/include/finapi/Execution/Backtest/: BacktestExecution.h  FinApiHandler.h
Low/include/finapi/Modelers/: EquityCurve.h  FinDataFrame.h  FinDataModeler.h  HoldingsDataFrame.h
Low/include/finapi/Models/: Bar.h  BufferStruct.h  Company.h  DataTag.h  EodAdj.h  Fields.h  FinDataFrame.h  FinDataModel.h  ModelComparator.h  Models.h  Statement.h  TimeStamp.h
Low/include/finapi/Network/: CClient.h  File.h  FtpConnecter.h  Network.h  ServerStream.h
Low/src/: Backtester.cpp  Execution.cpp  Models.cpp  Network.cpp
